--- a/style.css
+++ b/style.css
@@ -1,18 +1,40 @@
 body{
     height: 100%;
-    margin: 0;
-    padding: 0;
+    background-color: #181921;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 #map {
-    height: 500px;
+    position: relative;
+    height: 100%;
     width: 100%;
-    display: block;
-    margin: auto;
-    padding: auto;
+    z-index: 0;
 }
 .search-box {
     position: absolute;
-    top: 20px;
-    right: 20px;
+    align-self: baseline;
     z-index: 1;
+}
+
+.contain {
+    display: flex;
+    padding: 1px 0px;
+    border-width: 10px;
+    border-style: double;
+    align-items: center;
+    height: 600px;
+    width: 600px;
+}
+#heading{
+    text-align: center;
+    font-size: 52px;
+    text-transform: uppercase;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 62px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #EEEFFC;
+    
 }
